# torch-diffusion

./: .flake8  Dockerfile  Dockerfile.inference  Dockerfile.preprocess  Dockerfile.training  Dockerfile.tune  Makefile  diffusion.ipynb  inference.ipynb  mypy.ini  preprocess.sh  pyproject.toml  start.sh  training.sh
k8/: job.yaml  pv.yaml  pvc.yaml
k8/common/: config.yaml
k8/inference/: job.yaml  pv.yaml  pvc.yaml
k8/preprocess/: job.yaml  pv.yaml  pvc.yaml
k8/training/: job.yaml  pv.yaml  pvc.yaml
k8/tune/: job.yaml  pv.yaml  pvc.yaml
torch_diffusion/: __main__.py  config.py  tune.py  utils.py
torch_diffusion/callbacks/: slack_alert.py
torch_diffusion/config/: config.yaml
torch_diffusion/data/: custom_image_dataset.py  custom_pt_dataset.py  image_data_module.py  preprocessor.py
torch_diffusion/model/: context_unit.py  difussion_model.py  embedfc.py  inference.py  residual_conv_block.py  unet_down.py  unet_up.py
torch_diffusion/slack/: client.py
