[tool.poetry]
name = "torch-diffusion"
version = "0.1.0"
description = ""
authors = ["Matthew Tondreau <mmtondreau@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_diffusion"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
