[tool.poetry]
name = "torch-diffusion"
version = "0.1.0"
description = ""
authors = ["Matthew Tondreau <mmtondreau@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_diffusion"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
lightning = "^2.1.0"
ray = {extras = ["tune"], version = "^2.7.1"}
scikit-learn = "^1.3.2"
torchmetrics = "^1.2.0"
hydra-core = "^1.3.2"
slack-sdk = "^3.23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
